--- a/view/grid.ejs
+++ b/view/grid.ejs
@@ -21,7 +21,7 @@
     <%}%>
         </div>
         <button class="search">
-            Search
+            Start Search
         </button>
         <script src="https://cdnjs.cloudflare.com/ajax/libs/axios/0.19.2/axios.js" crossorigin="true"></script>
         <script src="script.js"></script>
