--- a/Microsoft_frontend/grid.css
+++ b/Microsoft_frontend/grid.css
@@ -23,7 +23,7 @@
     box-shadow: 0 8px 16px 0 rgba(0,0,0,0.2), 0 6px 20px 0 rgba(0,0,0,0.19);
     border-radius: 40px;
     top:0;
-    background-color: #151616;
+    background-color: #357d8f;
     border: none;
     font-size: 20px;
     color: #FFFFFF;
